# ref-contracts

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  _rust_setup.sh  codehash.sh  docs.md
.github/workflows/: exchange.yaml  farming.yaml
doc/: features.md  fee_details.md  user_interfaces.md
mock-boost-farming/: Cargo.toml
mock-boost-farming/src/: actions_of_farmer_reward.rs  actions_of_farmer_seed.rs  actions_of_seed.rs  big_decimal.rs  booster.rs  errors.rs  events.rs  farmer.rs  farmer_seed.rs  legacy.rs  lib.rs  management.rs  owner.rs  seed.rs  seed_farm.rs  storage_impl.rs  token_receiver.rs  utils.rs  view.rs
mock-price-oracle/: Cargo.toml
mock-price-oracle/src/: lib.rs
mock-pyth/: Cargo.toml
mock-pyth/src/: lib.rs
mock-wnear/: Cargo.toml
mock-wnear/src/: lib.rs  w_near.rs
recover-state/: Cargo.toml  build_local.sh
recover-state/src/: lib.rs
ref-adboard/: Cargo.toml  build_docker.sh  build_local.sh  readme.md
ref-adboard/src/: lib.rs  owner.rs  token_receiver.rs  token_receiver_ex.rs  utils.rs  view.rs
ref-adboard/tests/: test_trading.rs
ref-balance-extractor/: Cargo.toml
ref-balance-extractor/output/: balances.csv  ref_balances.csv
ref-balance-extractor/res/: deposit.json  deposit_success.json  ref-farming.near.state.45195764.json  skyward_ref_withdrawal.json  token.ref-finance.near.state.45195764.json  withdraw.json  withdraw_success.json
ref-balance-extractor/src/: exchange.rs  farming.rs  fungible_token.rs  lazy_option.rs  lookup_map.rs  main.rs  skyward.rs  state.rs  unordered_map.rs  unordered_set.rs  utils.rs  vector.rs
ref-components/: Cargo.toml  README.md
ref-components/src/: account.rs  account_impl.rs  lending_pool.rs  lib.rs  storage_consts.rs
ref-escrow/: Cargo.toml  build_docker.sh  build_local.sh
ref-escrow/src/: account.rs  lib.rs
ref-escrow/tests/: test_escrow.rs
ref-exchange/: Cargo.toml  README.md  _rust_setup.sh  build.sh  build_docker.sh  build_docker_own.sh  build_local.sh  release_notes.md  stable_swap.md
ref-exchange/neardev/: dev-account  dev-account.env
ref-exchange/src/: account_deposit.rs  account_lostfound.rs  action.rs  admin_fee.rs  client_echo_limit.rs  custom_keys.rs  donation.rs  errors.rs  event.rs  fees.rs  internals.rs  legacy.rs  lib.rs  multi_fungible_token.rs  oracle.rs  owner.rs  pool.rs  pool_limit_info.rs  shadow_actions.rs  shares.rs  simple_pool.rs  storage_impl.rs  swap_volume.rs  token_receiver.rs  unit_lpt_cumulative_infos.rs  utils.rs  views.rs
ref-exchange/src/degen_swap/: degen.rs  math.rs  mod.rs  price_oracle.rs  pyth_oracle.rs
ref-exchange/src/rated_swap/: README.md  linear_rate.rs  math.rs  mod.rs  nearx_rate.rs  rate.rs  rates.rs  sfrax_rate.rs  stnear.rs  stnear_rate.rs  stnear_rates.rs
ref-exchange/src/stable_swap/: curve.md  fee_strategy.md  math.rs  mod.rs  stnear.rs
ref-exchange/tests/: simulate_storage.rs  test_account_upgrade.rs  test_admin_fee.rs  test_client_echo.rs  test_degen_pool.rs  test_donation.rs  test_errors.rs  test_extra_gas_for_client_echo.rs  test_frozenlist.rs  test_fuzz.rs  test_fuzz_amm.rs  test_fuzzy_stable.rs  test_guardians.rs  test_high_order.rs  test_hotzap.rs  test_inner_account.rs  test_instant_swap.rs  test_lostfound.rs  test_migrate.rs  test_owner.rs  test_rated_pool.rs  test_stable_pool.rs  test_stable_pool_storage.rs  test_stable_swap.rs  test_stable_swap_daniel.rs  test_stable_swap_robert.rs  test_storage.rs  test_swap.rs
ref-exchange/tests/common/: utils.rs
ref-exchange/tests/fuzzy/: constants.rs  create_simple_pool.rs  direct_swap.rs  liquidity_manage.rs  mod.rs  pool_swap.rs  types.rs  utils.rs
ref-farming/: Cargo.toml  build.sh  build_docker.sh  build_local.sh  farm_seed.rs  how_does_it_work.md  readme.md  release_notes.md  rust_setup.sh  simple_farm.rs  storage_impl.rs  token_receiver.rs
ref-farming-v2/: Cargo.toml  build_docker.sh  build_local.sh  readme.md
ref-farming-v2/src/: actions_of_farm.rs  actions_of_farmer.rs  actions_of_reward.rs  actions_of_seed.rs  cd_account.rs  errors.rs  farm.rs  farm_seed.rs  farmer.rs  legacy.rs  lib.rs  owner.rs  simple_farm.rs  storage_impl.rs  token_receiver.rs  utils.rs  view.rs
ref-farming-v2/tests/: test_actions_of_farm.rs  test_actions_of_reward.rs  test_actions_of_seed.rs  test_cd_account.rs  test_failures.rs  test_fuzzy.rs  test_migrate.rs  test_multi_farms.rs  test_owner.rs  test_seed_amount.rs  test_single_farm.rs  test_stake_unstake.rs  test_storage.rs  test_user_rps.rs
ref-farming-v2/tests/common/: actions.rs  init.rs  utils.rs  views.rs
ref-farming-v2/tests/fuzzy/: claim.rs  constant.rs  stake.rs  unstake.rs  utils.rs
ref-farming/src/: actions_of_farm.rs  actions_of_reward.rs  actions_of_seed.rs  errors.rs  farm.rs  farm_seed.rs  farmer.rs  legacy.rs  lib.rs  owner.rs  simple_farm.rs  storage_impl.rs  sudo.rs  token_receiver.rs  utils.rs  view.rs
ref-farming/tests/: test_claim_and_withdraw.rs  test_failures.rs  test_farm_before_farmer.rs  test_fuzzy.rs  test_migrate.rs  test_min_deposit.rs  test_multi_farms.rs  test_one_farm.rs  test_one_farm_one_farmer.rs  test_one_farm_two_farmer.rs  test_owner.rs  test_seed_amount.rs  test_single_farm.rs  test_stake_unstake.rs  test_storage.rs
ref-farming/tests/common/: actions.rs  init.rs  mod.rs  utils.rs  views.rs
ref-farming/tests/fuzzy/: claim.rs  mod.rs  stake.rs  types.rs  unstake.rs  utils.rs
releases/: ref_exchange_release.wasm  ref_exchange_release_unzipped.wasm  ref_exchange_release_v171.wasm  ref_exchange_release_v1910.wasm  ref_exchange_release_v1911.wasm  ref_exchange_release_v192.wasm  ref_exchange_release_v199.wasm  ref_farming_release.wasm
res/: ref_adboard_local.wasm  ref_adboard_release.wasm  ref_exchange.wasm  ref_exchange_101.wasm  ref_exchange_141.wasm  ref_exchange_local.wasm  ref_exchange_release.wasm  ref_farming.wasm  ref_farming_local.wasm  ref_farming_release.wasm  ref_farming_v0104.wasm  ref_farming_v2_release.wasm  test_token.wasm
scripts/: codehash.py
test-rated-token/: Cargo.toml
test-rated-token/src/: lib.rs
test-token/: Cargo.toml  README.md  build.sh
(+2 files in other folders)
