[workspace]
members = [
    "./ref-exchange",
    "./test-token",
    "./ref-farming",
    "./test-rated-token",
    "./mock-boost-farming",
    "./mock-price-oracle",
    "./mock-wnear",
    "./mock-pyth"
]


[profile.release]
codegen-units = 1
# s = optimize for binary size ("z" would additionally turn off loop vectorization)
opt-level = "z"
# link time optimization
lto = true
debug = false
panic = "abort"
overflow-checks = true
