[package]
name = "ref_farming"
version = "0.5.1"
authors = ["Marco Sun <sun.dsk1@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { git = "https://github.com/near/near-sdk-rs", rev = "9d99077" }
near-contract-standards = { git = "https://github.com/near/near-sdk-rs", rev = "9d99077" }
uint = { version = "0.9.0", default-features = false }
# near-sdk = "3.1.0"
# near-contract-standards = "3.1.0"

[dev-dependencies]
near-sdk-sim = { git = "https://github.com/near/near-sdk-rs", rev = "9d99077" }
# near-sdk-sim = "3.1.0"
test-token = { path = "../test-token" }
ref-exchange = { path = "../ref-exchange" }
