[package]
name = "ref_farming"
version = "1.0.4"
authors = ["Marco Sun <sun.dsk1@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
uint = { version = "0.9.0", default-features = false }
near-sdk = "3.1.0"
near-contract-standards = "3.1.0"

[dev-dependencies]
near-sdk-sim = "3.1.0"
test-token = { path = "../test-token" }
ref-exchange = { path = "../ref-exchange" }
rand = "0.8"
rand_pcg = "0.3"