[package]
name = "test-rated-token"
version = "0.0.1"
authors = ["Marco Sun <sun.dsk1@gmail.com>", "MagicGordon"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "=4.0.0-pre.7"
near-contract-standards = "=4.0.0-pre.7"

[dev-dependencies]
near-sdk-sim = "=4.0.0-pre.7"